<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">PureNexus</string>
    <string name="about_frag_title">About</string>
    <string name="pushbullet_data" translatable="false">https://www.pushbullet.com/channel?tag=purenexus</string>
    <string name="gplus_data" translatable="false">https://plus.google.com/communities/103055954354785266764</string>
    <string name="twit_data" translatable="false">https://twitter.com/BeansTown106</string>
    <string name="payp_data" translatable="false">http://forum.xda-developers.com/donatetome.php?u=4395895</string>
    <string name="miscinfo_title">App Info</string>
    <string name="miscinfo_summary">Click here for changelog and app-specific credits</string>
    <string name="nexus_about">PureNexus info</string>
    <string name="nexus_about_summary">Misc info about the rom, developer and contributors</string>
    <string name="nexus_useful">Useful links</string>
    <string name="nexus_updates">Pushbullet update notifications</string>
    <string name="lead_dev">Lead Developer</string>
    <string name="beans">BeansTown106</string>
    <string name="beans_sum">Main PureNexus maintainer</string>
    <string name="beans_twit">BeansTown\'s Twitter</string>
    <string name="nexus_gplus">PureNexus Google+ community</string>
    <string name="donate">Donate to support development</string>
    <string name="contribute">Contributors</string>
    <string name="devonte">Dwitherell</string>
    <string name="devonte_sum">Coder/tweaker</string>
    <string name="dhack">Dhacker29</string>
    <string name="dhack_sum">Coder/maintainer</string>
    <string name="daveya">DaveyAnnihilation</string>
    <string name="gfx_sum">Graphics/icons</string>
    <string name="surge">Surge1223</string>
    <string name="bajasur">Bajasur</string>
    <string name="tweak_sum">Misc Tweaks</string>
    <string name="click1">Wouldn\'t it be neat if this did something&#8230;</string>
    <string name="click2">It\'s not like pressing this %1$d times will do anything&#8230; lay off, sheesh</string>
    <string name="click3">&#8230; %1$d times now?! Ok, just quit. I\'m going to act like nothing happened, so stop</string>
    <string name="tab_indicator_alpha" translatable="false">0x26</string>
    <string name="apppicker_frag_title">App picker</string>
    <string name="apppick_custom">Custom</string>
    <string name="apppick_apps">Applications</string>
    <string name="apppick_shortcuts">Shortcuts</string>
    <string name="screen_off">Screen off</string>
    <string name="powermenu">Power menu</string>
    <string name="donothing">Do nothing</string>
    <string name="picker_summary">Not set</string>
    <string name="alertdiagtitle">Changelog v1.0</string>
    <string name="setpositive">OK</string>
    <string name="setnegative">Credits</string>
    <string name="changelog"><![CDATA[
&#8226; Made a groovy little settings app<br />
&#8226; Did lots of minor UI things<br />
&#160; &#8226; Animated fragment switching and backstack handling<br />
&#160; &#8226; Actionbar options when interacting with navdrawer<br />
&#8226; Modified margaritov/SlimRom color picker<br />
&#160; &#8226; Added alpha slider text - represents current alpha as percentage<br />
&#160; &#8226; Fixed minor hex-picking int-to-HSV-to-int issue<br />
&#160; &#8226; Edited color picker layout to show better in landscape<br />
&#160; &#8226; Added reset button for default color in color picker<br />
&#160; &#8226; Custom preview options setable via longpress<br />
&#8226; Added ability to hide/show app in app drawer<br />
&#8226; Added some fun extras<br />
&#8226; Incorporated Chainfire\'s libsuperuser to handle root tasks<br />]]></string>
    <string name="credits"><![CDATA[
&#8226; Chainfire for the easy-to-implement libsuperuser library<br />
&#8226; margaritov/slim rom for the color picker base<br />
&#8226; Beans for the rom and an excuse to tinker<br />
&#8226; Cheekybastards for living up to their namesake<br />
&#8226; DaveyAnnihilation for all the help with setting things up theme-friendly and general aesthetics<br />
&#8226; Gunthermic, for testing and great ideas with the colorpicker<br />
&#8226; All contributors to stackoverflow or various other java/android app making resources<br />
&#8226; Those not mentioned but should have been<br />]]></string>
    <string name="battery_frag_title">Battery settings</string>
    <string name="battery_frag_summary">Custom battery &amp; batterybar options</string>
    <string name="status_bar_battery_title">Battery icon</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="device_info_title">Phone info</string>
    <string name="device_summ">Get general info about your device</string>
    <string name="title_battery_history">Battery history</string>
    <string name="summary_battery_history">Summary of how battery has been used</string>
    <string name="title_usage_statistics">Usage statistics</string>
    <string name="summary_usage_statistics">Summary of application usage</string>
    <string name="wifi_title">WiFi information</string>
    <string name="wifi_summary">Various bits of WiFi relevant information</string>
    <string name="buildproptitle">Build.prop editor</string>
    <string name="buildpropsummary">Click to open build.prop editor</string>
    <string name="fiswitchtitle">Project Fi Tools</string>
    <string name="fiswitchsummary">Click for useful dial codes</string>
    <string name="app_ops_title">AppOps</string>
    <string name="app_ops_summary">Advanced permission &amp; application management</string>
    <string name="display_category">Display options</string>
    <string name="led_category">Led controls</string>
    <string name="battery_light_title">Battery light</string>
    <string name="notification_light_title">Notification light</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="lockscreen_gen_title">Lockscreen general options</string>
    <string name="lockscreen_targets_message">Lockscreen shortcuts</string>
    <string name="lockscreen_wallpaper_title">Lockscreen wallpaper</string>
    <string name="lockscreen_wallpaper_set_title">Set lockscreen wallpaper</string>
    <string name="lockscreen_wallpaper_clear_title">Reset lock screen wallpaper</string>
    <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
    <string name="unlock_quick_unlock_control_summary">Enable at your own discretion. pins with more than 4 digits can cause issues</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="double_tap_sleep_anywhere_title">Double-tap to sleep anywhere</string>
    <string name="double_tap_sleep_anywhere_summary">Double tap anywhere on the lockscreen to put the device to sleep</string>
    <string name="lockscreen_maxnotif_title">Lockscreen notification count</string>
    <string name="lockscreen_maxnotif_sumary">Enable adjustment of max lockscreen notifications</string>
    <string name="lockscreen_maxnotif_config">Max lockscreen notifications</string>
    <string name="hide_lockscreen_clock_title">Lockscreen clock</string>
    <string name="hide_lockscreen_date_title">Lockscreen date</string>
    <string name="hide_lockscreen_alarm_title">Lockscreen alarm text</string>
    <string name="lock_clock_font_title">Lockscreen clock font</string>
    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
    <string name="lockscreen_weather_fragment_title">Lockscreen weather</string>
    <string name="lockscreen_weather_summary">Customize lockscreen weather elements</string>
    <string name="weather_show_weather_title">Show weather</string>
    <string name="weather_show_location_title">Show location</string>
    <string name="weather_condition_icon_title">Weather condition icon</string>
    <string name="navigation_bar_cus">Navbar customization</string>
    <string name="navigation_bar_opt_cat">Navigation bar options</string>
    <string name="kill_app_longpress_back">Kill app back button</string>
    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back button</string>
    <string name="recents_longpress_title">Recents longpress</string>
    <string name="recents_longpress_summary">Longpress recents to go to last open app</string>
    <string name="ime_switcher_notify">IME selector icon</string>
    <string name="ime_switcher_notify_summary">Display input method selector icon</string>
    <string name="double_tap_sleep_nav_bar_title">Double-tap to sleep</string>
    <string name="double_tap_sleep_nav_bar_summary">Double tap on the navigation bar to put the device to sleep</string>
    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons while typing. Overrides IME switcher.</string>
    <string name="navbar_enable_bar">Enable</string>
    <string name="navbardimenfrag_title">Navbar Dimensions</string>
    <string name="navbarbuttonfrag_title">Buttons and layout</string>
    <string name="media_cat_title">Media options</string>
    <string name="notif_cat_title">Notification options</string>
    <string name="battery_saver_notif_title">Battery saver notification</string>
    <string name="battery_saver_notif_summary">Show battery saver notification when enabled</string>
    <string name="battery_low_notif_title">Low battery notification</string>
    <string name="battery_low_notif_summary">Show low battery notification when enabled</string>
    <string name="camera_sounds_title">Camera shutter sound</string>
    <string name="camera_sounds_summary">Enable system camera shutter sound</string>
    <string name="dbl_tap_vib_title">Double tap power for camera vibration</string>
    <string name="dbl_tap_vib_summary">Vibrate on double tap of power button when enabled</string>
    <string name="interruptions_ignore_while_media_title">Prevent audio ducking</string>
    <string name="interruptions_ignore_while_media_summary">Do not reduce media playback volume when a notification arrives</string>
    <string name="less_notification_sounds_title">Less frequent notification sounds</string>
    <string name="less_notification_sounds_summary">Limit the notification sounds of each app to only play once per set time period</string>
    <string name="action_about">About</string>
    <string name="action_launchhide">Drawer hide</string>
    <string name="action_search">Search</string>
    <string name="deleteprop">Delete</string>
    <string name="cancelprop">Cancel</string>
    <string name="editprop_backup">Backup</string>
    <string name="editprop_restore">Restore</string>
    <string name="action_fabhide">Show FAB</string>
</resources>