<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Pure Nexus Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
            android:title="@string/app_ops_title"
            android:summary="@string/app_ops_summary" >
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.settings"
            android:targetClass="com.android.settings.applications.AppOpsSummary" />
    </PreferenceScreen>
    <Preference android:title="@string/device_info_title" android:key="radioinfo" android:summary="@string/device_summ">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.RadioInfo" />
    </Preference>
    <Preference android:title="@string/title_battery_history" android:key="battery_history_settings" android:summary="@string/summary_battery_history">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.fuelgauge.PowerUsageSummary" />
    </Preference>
    <Preference android:title="@string/title_usage_statistics" android:key="usage_statistics_settings" android:summary="@string/summary_usage_statistics">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.UsageStatsActivity" />
    </Preference>
    <Preference android:title="@string/wifi_title" android:summary="@string/wifi_summary">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.wifi.WifiInfo" />
    </Preference>
    <Preference android:title="@string/buildproptitle" android:key="buildpropeditor" android:summary="@string/buildpropsummary" />
    <Preference android:title="@string/fiswitchtitle" android:key="fiswitch" android:summary="@string/fiswitchsummary" />
</PreferenceScreen>