<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pure="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/action_items">
        <item android:id="@+id/action_about" android:title="@string/action_about"
            android:orderInCategory="5" pure:showAsAction="ifRoom" />
        <item android:id="@+id/action_discard" android:title="@string/cancelprop"
            android:orderInCategory="10" pure:showAsAction="ifRoom" />
        <item android:id="@+id/action_delete" android:title="@string/deleteprop"
            android:orderInCategory="15" pure:showAsAction="never" />
        <item android:id="@+id/action_search"
            android:title="@string/action_search"
            pure:actionViewClass="android.support.v7.widget.SearchView"
            pure:showAsAction="always|collapseActionView"/>
        <item android:id="@+id/action_backup" android:title="@string/editprop_backup"
            android:orderInCategory="20" pure:showAsAction="never" />
        <item android:id="@+id/action_restore" android:title="@string/editprop_restore"
            android:orderInCategory="25" pure:showAsAction="never" />
        <item android:id="@+id/action_fabhide" android:title="@string/action_fabhide"
            android:orderInCategory="30" android:checkable="true" pure:showAsAction="never" />
        <item android:id="@+id/action_launchhide" android:title="@string/action_launchhide"
            android:orderInCategory="35" android:checkable="true" pure:showAsAction="never" />
    </group>
</menu>

