<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Pure Nexus Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pure="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory
        android:key="disp"
        android:title="@string/display_category" >

        <Preference
            android:key="expanded_desktop"
            android:title="@string/power_menu_expanded_desktop">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.settings"
                android:targetClass="com.android.settings.applications.ExpandedDesktopPreferenceFragment" />
        </Preference>

        <com.android.purenexussettings.preferences.GlobalSettingSwitchPreference
            android:key="wake_when_plugged_or_unplugged"
            android:title="@string/wake_when_plugged_or_unplugged_title"
            android:summary="@string/wake_when_plugged_or_unplugged_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="leds"
        android:title="@string/led_category" >

        <Preference
            android:key="battery_light"
            android:title="@string/battery_light_title">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.settings"
                android:targetClass="com.android.settings.notificationlight.BatteryLightSettings" />
        </Preference>

        <Preference
            android:key="notification_light"
            android:title="@string/notification_light_title">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.settings"
                android:targetClass="com.android.settings.notificationlight.NotificationLightSettings" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
